update mobile styles and align the $ correctly.

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -20,3 +20,5 @@ $content: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $pad-left-title: 3.6em;
 $med-pad: 3em;
 $new-spacer: 1.6em;
+
+$phone-width: 93.5%;
