--- a/src/scss/components/_header-bar-template.scss
+++ b/src/scss/components/_header-bar-template.scss
@@ -5,7 +5,7 @@
   width: 100%;
   @include respond(tab-land) {
     margin: auto;
-    width: 95%;
+    width: 93.5%;
   }
   @include respond(tab-land) {
     padding-top: 0.5em;
