--- a/src/scss/components/_news-feed.scss
+++ b/src/scss/components/_news-feed.scss
@@ -8,7 +8,7 @@
   margin-bottom: 1.2rem;
   @include respond(tab-land) {
     margin: 2.2em 2% 1em 2%;
-    width: 95%;
+    width: $phone-width;
   }
 }
 
