--- a/src/scss/components/_upcoming-games.scss
+++ b/src/scss/components/_upcoming-games.scss
@@ -3,6 +3,10 @@
 .upcoming-games {
   padding-top: 1.8em;
   margin: 0 2em;
+  @include respond(phone) {
+    margin: auto;
+    width: $phone-width;
+  }
 }
 
 .month-bar {
@@ -10,6 +14,9 @@
   justify-content: center;
   align-items: center;
   padding: 0.8em 0 0.8em 0;
+  &:first-child {
+    display: none;
+  }
   &-month {
     font-family: $headlines;
     font-size: 1.6em;
@@ -19,7 +26,7 @@
 
   &-line {
     width: 50%;
-    background-color: black;
+    background-color: #897a55;
     height: 2px;
   }
 }
@@ -34,17 +41,30 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  @include respond(tab-port) {
+    height: 338px;
+    width: 326px;
+  }
 
   &-container {
     display: flex;
     flex-wrap: wrap;
+    @include respond(tab-port) {
+      justify-content: center;
+    }
   }
 
   &-img {
     padding: 16px 0 27px 0;
     text-align: center;
+    @include respond(tab-port) {
+      padding: 25px 0 42px 0;
+    }
     img {
       height: 76px;
+      @include respond(tab-port) {
+        height: 122px;
+      }
     }
   }
 
@@ -61,12 +81,13 @@
       &-name {
         font-family: $headlines;
         text-transform: uppercase;
-        font-weight: 500;
-        font-size: 1em;
+        font-weight: 400;
+        font-size: 1.1em;
+        letter-spacing: 0.5px;
       }
       &-date {
         text-transform: uppercase;
-        font-weight: 500;
+        font-weight: 600;
         font-size: 0.6em;
       }
       &-when-n-where {
@@ -95,13 +116,15 @@
         color: $blazers-red;
         font-weight: 900;
         font-size: 1.3em;
-
-        // sup {
-        //   // display: inline-block;
-        //   // height: 100%;
-        //   // font-size: 0.5em;
-        //   // margin-right: -4px;
-        // }
+        &-bling {
+          display: inline;
+          font-size: 0.5em;
+          vertical-align: super;
+          margin-right: 1.5px;
+        }
+        &-copy {
+          display: inline;
+        }
       }
     }
   }
@@ -110,6 +133,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color: $blazers-red;
+    font-family: $content;
+    font-weight: 900;
+    font-size: 0.65em;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 13px 10px;
+    border-top: 1px solid $border;
+    @include respond(tab-port) {
+      padding: 21px 10px;
+      font-size: 1em;
+    }
+
     &-arrow {
       display: inline-block;
       margin-left: 5px;
@@ -120,14 +156,5 @@
       border-bottom: 4px solid transparent;
       border-left: 4px solid $blazers-red;
     }
-
-    color: $blazers-red;
-    font-family: $content;
-    font-weight: 900;
-    font-size: 0.65em;
-    text-transform: uppercase;
-    text-align: center;
-    padding: 13px 10px;
-    border-top: 1px solid $border;
   }
 }
